syntax = "proto3";

option go_package = "/booksapp";
package booksapp;

import "google/api/annotations.proto";

service Book{
    rpc GetBooks (GetBooksReq) returns (GetBooksResp){
        option (google.api.http) = {
            post:"/book",
            body:"*"
        };
    }
    rpc GetBook (Id) returns (BookInfo){
        option (google.api.http) = {
            get: "/book/{id}"
        };
    }
    rpc CreateBook (BookInfo) returns (Id){
        option (google.api.http) = {
            post: "/createbook"
            body: "*"
        };
    }
    rpc UpdateBook (BookInfo) returns (Status){
        option (google.api.http) = {
            put: "/book"
            body: "*"
        };
    }
    rpc DeleteBook (Id) returns (Status){
        option (google.api.http) = {
            delete: "/book/{id}"
        };
    }

    rpc Upload(stream UploadRequest) returns (UploadResponse){
        option (google.api.http) = {
            post: "/uploadBook",
            body:"*"
        };
    }

    rpc Download(DownloadRequest) returns (stream DownloadResponse){
        option (google.api.http) = {
            post: "/downloadBook",
            body:"*"
        };
    }

}

message BookInfo {
    int64 id = 1;
    string title = 2;
    string genre = 3;
    string author = 4;
}

message Id {
    int64 id = 1;
}

message Status{
    int64 value = 1;
}

message GetBooksReq {
    // Requested page
    int64 page = 1;
    // Requested number of items per page
    int64 per_page = 2;
  }

message GetBooksResp {
    // The collection of books
    repeated BookInfo books = 1;
}
message UploadRequest {
    string mime = 1;
    bytes chunk = 2;
}
 
message UploadResponse {
    string name = 1;
}

message DownloadRequest {
    string name = 1;
}
 
message DownloadResponse {
    bytes chunk = 1;
    string mime = 2;
}